# video-player

./: .gitignore  CMakeLists.txt  README.md
include/: common.h  video_player.h
src/: main.cpp  pause_button.cpp  pause_button.h  play_button.cpp  play_button.h  progress_bar.cpp  progress_bar.h  skip_button.cpp  skip_button.h  video_player.cpp  video_state.h
src/tests/: CMakeLists.txt  progress_bar_tests.cpp
src/utils/: skia_utils.cpp  skia_utils.h
